Really fix scrollbar shift.

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,6 +4,6 @@
 
 @use 'open-props-scss' as *;
 
-body {
+html {
 	scrollbar-gutter: stable;
 }
